--- a/css/demo.css
+++ b/css/demo.css
@@ -1,4 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+button {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  border: none;
+  background-color: #2da44f;
+  color: white;
+  font-weight: 800;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  width: 6rem;
+  border-radius: 5px;
+  transition: 0.1s linear;
+}
+
+button:hover {
+  opacity: 0.75;
+  transition: 0.1s linear;
+  cursor: pointer;
+}
+
+.download {
+  vertical-align: text-bottom;
+  overflow: hidden;
+  display: inline-block;
+  color: white;
+  fill: currentColor;
+}
+
 * {
   font-family: "Poppins", sans-serif;
 }
