--- a/sass/demo.scss
+++ b/sass/demo.scss
@@ -7,6 +7,39 @@ $lighter: #f3f3f3;
 $light: #ececec;
 $dark: #575c62;
 $muted: #EDECF1;
+$green: #2da44f;
+
+button {
+
+    margin: 0;
+    padding: 0;
+    outline: none;
+    border: none;
+    background-color: $green;
+    color: white;
+    font-weight: 800;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    width: 6rem;
+    border-radius: 5px;
+    transition: 0.1s linear;
+}
+
+button:hover {
+
+    opacity: 0.75;
+    transition: 0.1s linear;
+    cursor: pointer;
+}
+
+.download {
+
+    vertical-align: text-bottom;
+    overflow: hidden;
+    display: inline-block;
+    color: white;
+    fill: currentColor;
+}
 
 * {
 
